--- a/module5/casestudy/angular-casestudy-module5/angular.json
+++ b/module5/casestudy/angular-casestudy-module5/angular.json
@@ -23,10 +23,13 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": ["node_modules/bootstrap/dist/css/bootstrap.css",
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-casestudy-module5"
+    }
+  },
+  "defaultProject": "angular-casestudy-module5",
+  "cli": {
+    "analytics": "2db2b03f-f99f-4a8d-a288-b70393f9d8b4"
+  }
 }
