--- a/module5/ss6_angular_form/angular-name-card/angular.json
+++ b/module5/ss6_angular_form/angular-name-card/angular.json
@@ -23,10 +23,13 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": ["node_modules/bootstrap/dist/css/bootstrap.css",
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -119,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-name-card"
+    }
+  },
+  "defaultProject": "angular-name-card",
+  "cli": {
+    "analytics": "f3cc8aa2-96a6-42e3-8ad2-bcbb4441cb2f"
+  }
 }
