--- a/module5/ss6_angular_form/form-dang-ki/form-dang-ki/angular.json
+++ b/module5/ss6_angular_form/form-dang-ki/form-dang-ki/angular.json
@@ -27,7 +27,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -120,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "form-dang-ki"
+    }
+  },
+  "defaultProject": "form-dang-ki",
+  "cli": {
+    "analytics": "ab26e293-112b-493a-9606-f3d2b3b5ecc2"
+  }
 }
