--- a/Sprint 2/front_end_sprint_2/shop-online/package.json
+++ b/Sprint 2/front_end_sprint_2/shop-online/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "^5.1.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "ngx-toastr": "^12.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
