--- a/Sprint 2/back_end_sprint_2/shop-online/src/main/resources/application.properties
+++ b/Sprint 2/back_end_sprint_2/shop-online/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.hb2dll.auto = update
 #Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tongphuc1495@gmail.com
-spring.mail.password=gbjybygzlobhaitq
+spring.mail.username=phucdev1402@gmail.com
+spring.mail.password=pfyahynwljstoawo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
